--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ body {
   margin: 40px auto;
   display: flex;
   flex-direction: column;
+  text-align:center;
   align-items: center;
   justify-content: center; 
   min-height: 100vh; 
